--- a/index.html
+++ b/index.html
@@ -10,12 +10,23 @@
 </head>
 <body>
 <div id="app"></div>
+<!-- https://docsify.js.org/#/zh-cn/plugins?id=%e5%9c%a8-github-%e4%b8%8a%e7%bc%96%e8%be%91 -->
+<!-- https://github.com/njleonzhang/docsify-edit-on-github -->
+<script src="//cdn.jsdelivr.net/npm/docsify-edit-on-github"></script>
 <script>
     window.$docsify = {
         name: 'GitLab、kubernetes 知识库',
         repo: 'https://github.com/xuxiaowei-com-cn/gitlab-k8s',
         // https://docsify.js.org/#/zh-cn/configuration?id=autoheader
         autoHeader: true,
+        plugins: [
+            // https://docsify.js.org/#/zh-cn/plugins?id=%e5%9c%a8-github-%e4%b8%8a%e7%bc%96%e8%be%91
+            // https://github.com/njleonzhang/docsify-edit-on-github
+            EditOnGithubPlugin.create(
+                window.location.hostname.includes('github') ? 'https://github.com/xuxiaowei-com-cn/gitlab-k8s/blob/main/' : 'https://gitee.com/-/ide/project/xuxiaowei-com-cn/gitlab-k8s/edit/main/-/', null, function (file) {
+                    return window.location.hostname.includes('github') ? '在 GitHub 上编辑' : '在 Gitee 上编辑'
+                })
+        ],
     }
 </script>
 <!-- Docsify v4 -->
