--- a/index.html
+++ b/index.html
@@ -6,14 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta name="description" content="Description">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
+
+    <!-- https://www.jsdelivr.com/package/npm/docsify -->
+    <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4.13.1/lib/themes/vue.css"> -->
+    <link rel="stylesheet" href="static/npm/docsify@4.13.1/lib/themes/vue.css">
+
     <link rel="icon" href="static/favicon.ico" type="image/x-icon" />
 </head>
 <body>
 <div id="app"></div>
+
+<!-- https://www.jsdelivr.com/package/npm/docsify-edit-on-github -->
 <!-- https://docsify.js.org/#/zh-cn/plugins?id=%e5%9c%a8-github-%e4%b8%8a%e7%bc%96%e8%be%91 -->
 <!-- https://github.com/njleonzhang/docsify-edit-on-github -->
-<script src="//cdn.jsdelivr.net/npm/docsify-edit-on-github"></script>
+<!-- <script src="//cdn.jsdelivr.net/npm/docsify-edit-on-github@1.0.3/index.min.js"></script> -->
+<script src="static/npm/docsify-edit-on-github@1.0.3/index.min.js"></script>
+
 <script>
     window.$docsify = {
         name: 'GitLab、kubernetes 知识库',
@@ -30,13 +38,26 @@
         ],
     }
 </script>
+
 <!-- Docsify v4 -->
+
 <!-- https://docsify.js.org/#/zh-cn/plugins?id=%e5%a4%8d%e5%88%b6%e5%88%b0%e5%89%aa%e8%b4%b4%e6%9d%bf -->
-<script src="//cdn.jsdelivr.net/npm/docsify-copy-code/dist/docsify-copy-code.min.js"></script>
+<!-- <script src="//cdn.jsdelivr.net/npm/docsify-copy-code@2.1.1/dist/docsify-copy-code.min.js"></script> -->
+<script src="static/npm/docsify-copy-code@2.1.1/dist/docsify-copy-code.min.js"></script>
+
+<!-- https://www.jsdelivr.com/package/npm/docsify -->
 <!-- https://docsify.js.org/#/zh-cn/plugins?id=emoji -->
-<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/emoji.min.js"></script>
+<!-- <script src="//cdn.jsdelivr.net/npm/docsify@4.13.1/lib/plugins/emoji.min.js"></script> -->
+<script src="static/npm/docsify@4.13.1/lib/plugins/emoji.min.js"></script>
+
+<!-- https://www.jsdelivr.com/package/npm/docsify-count -->
 <!-- https://docsify.js.org/#/zh-cn/plugins?id=%e5%ad%97%e6%95%b0%e7%bb%9f%e8%ae%a1 -->
-<script src="//unpkg.com/docsify-count/dist/countable.js"></script>
-<script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+<!-- <script src="//cdn.jsdelivr.net/npm/docsify-count@1.1.0/dist/countable.min.js"></script> -->
+<script src="static/npm/docsify-count@1.1.0/dist/countable.min.js"></script>
+
+<!-- https://www.jsdelivr.com/package/npm/docsify -->
+<!-- <script src="//cdn.jsdelivr.net/npm/docsify@4.13.1/lib/docsify.min.js"></script> -->
+<script src="static/npm/docsify@4.13.1/lib/docsify.min.js"></script>
+
 </body>
 </html>
