:wrench: 启用封面页

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     window.$docsify = {
         name: 'GitLab、kubernetes 知识库',
         repo: 'https://github.com/xuxiaowei-com-cn/gitlab-k8s',
+        // https://docsify.js.org/#/zh-cn/configuration?id=coverpage
+        coverpage: true,
         // https://docsify.js.org/#/zh-cn/configuration?id=autoheader
         autoHeader: true,
         plugins: [
