--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 <!-- <script src="//cdn.jsdelivr.net/npm/docsify-edit-on-github@1.0.3/index.min.js"></script> -->
 <script src="static/npm/docsify-edit-on-github@1.0.3/index.min.js"></script>
 
+<!-- https://www.jsdelivr.com/package/npm/docsify-baidu-tj -->
+<!-- https://github.com/mg0324/docsify-baidu-tj -->
+<!-- <script src="//cdn.jsdelivr.net/npm/docsify-baidu-tj@1.0.2/dist/docsify-baidu-tj.min.js"></script> -->
+<script src="static/npm/docsify-baidu-tj@1.0.2/docsify-baidu-tj.min.js"></script>
+
 <script>
     window.$docsify = {
         name: 'GitLab、kubernetes 知识库',
@@ -38,6 +43,9 @@
                     return window.location.hostname.includes('github') ? '在 GitHub 上编辑' : '在 Gitee 上编辑'
                 })
         ],
+        // 百度统计ID
+        // gitlab-k8s.xuxiaowei.com.cn：2173e1f7d3ce3dce80b34490272e7b79
+        baiduTjId: "2173e1f7d3ce3dce80b34490272e7b79",
     }
 </script>
 
