--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
 <script>
     var _hmt = _hmt || [];
     (function () {
-        var hm = document.createElement("script");
-        // gitlab-k8s.xuxiaowei.com.cn：2173e1f7d3ce3dce80b34490272e7b79
-        hm.src = "https://hm.baidu.com/hm.js?2173e1f7d3ce3dce80b34490272e7b79";
-        var s = document.getElementsByTagName("script")[0];
-        s.parentNode.insertBefore(hm, s);
+        if (window.location.hostname !== 'localhost' && window.location.hostname !== '127.0.0.1') {
+            var hm = document.createElement("script");
+            // gitlab-k8s.xuxiaowei.com.cn：2173e1f7d3ce3dce80b34490272e7b79
+            hm.src = "https://hm.baidu.com/hm.js?2173e1f7d3ce3dce80b34490272e7b79";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        }
     })();
 </script>
 
